--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2636,8 +2636,9 @@ input, select, textarea {
 
 			.feature .image img {
 				display: block;
-				min-height: 100%;
-				min-width: 100%;
+				height: 100%;
+				width: 100%;
+				object-fit: cover;
 				position: absolute;
 			}
 
@@ -3300,3 +3301,31 @@ input, select, textarea {
 				}
 
 	}
+
+/* Custom styles */
+.design {
+	padding-top: 8rem;
+}
+
+.header-icons {
+	padding-top: 8rem;
+}
+
+.custom-icon {
+	-moz-transition: background-color 0.2s ease-in-out;
+	-webkit-transition: background-color 0.2s ease-in-out;
+	-ms-transition: background-color 0.2s ease-in-out;
+	transition: background-color 0.2s ease-in-out;
+	border-radius: 100%;
+	border: solid 1px rgba(224, 224, 224, 0.75);
+	display: inline-block;
+	height: 3rem;
+	line-height: 3rem;
+	text-align: center;
+	width: 3rem;
+	font-size: 25px;
+}
+
+.custom-icon:hover {
+	background: rgba(224, 224, 224, 0.15);
+}
