Add gallery with projects, change title

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3358,6 +3358,10 @@ input, select, textarea {
 	justify-content: space-between;
 }
 
+.image.projects-gallery:after {
+	content: inherit;
+}
+
 @media screen and (max-width: 1280px) {
 	.section-top {
 		padding-top: 4em;
