--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3362,6 +3362,22 @@ input, select, textarea {
 	content: inherit;
 }
 
+.magnifying-glass-wrapper {
+	width: 100%;
+	height: 100%;
+	position: relative;
+	z-index: 1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.magnifying-glass {
+	font-size: 3rem;
+	color: #fff;
+	opacity: 70%;
+}
+
 
 .fade-in-animation {
 	opacity: 0;
